# OpenEmbodied

./: .gitignore  1build.sh  2flash.sh  3clean.sh  CMakeLists.txt  README.md  README_en.md  README_ja.md  export_adf.sh  flash.bat  log.txt  monitor.bat  partitions.csv  partitions_32M_sensecap.csv  partitions_4M.csv  partitions_8M.csv  partitions_lottie.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
components/vb6824/: CMakeLists.txt  Kconfig  vb6824.c  vb6824.h
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  auth.cc  auth.h  background_task.cc  camer_test.h  device_state.h  device_state_event.cc  idf_component.yml  main.cc  ntp.cc  ntp.h  ota.cc  ota.h  soft_uart_config.h  watchdog.cc  watchdog.h
main/assets/common/: exclamation.p3  low_battery.p3  success.p3  vibration.p3
main/assets/en-US/: 0.p3  1.p3  2.p3  3.p3  4.p3  5.p3  6.p3  7.p3  8.p3  9.p3  activation.p3  err_pin.p3  err_reg.p3  language.json  upgrade.p3  welcome.p3  wificonfig.p3
main/assets/ja-JP/: 0.p3  1.p3  2.p3  3.p3  4.p3  5.p3  6.p3  7.p3  8.p3  9.p3  activation.p3  err_pin.p3  err_reg.p3  language.json  upgrade.p3  welcome.p3  wificonfig.p3
main/assets/zh-CN/: 3.p3  4.p3  8.p3  9.p3  battle_low.p3  bo.p3  config_fail.p3  config_success.p3  connect_success.p3  connecting.p3  err_pin.p3  err_reg.p3  language.json  mute.p3  net_err.p3  sleep.p3  upgrade.p3  voice_max.p3  voice_min.p3  wake_up.p3  welcome.p3
main/assets/zh-CN-LVLIN/: battle_low.p3  bo.p3  config_fail.p3  config_success.p3  connect_success.p3  connecting.p3  im_in.p3  language.json  mute.p3  net_err.p3  sleep.p3  success.p3  test_mode.p3  upgrade.p3  voice_max.p3  voice_min.p3  wake_up.p3  wificonfig.p3
main/assets/zh-TW/: 0.p3  1.p3  2.p3  3.p3  5.p3  6.p3  7.p3  activation.p3  err_pin.p3  err_reg.p3  language.json  welcome.p3  wificonfig.p3
main/audio/: audio_codec.cc  audio_codec.h  audio_processor.h  audio_service.cc  audio_service.h  mouth_open.h
main/audio/codecs/: box_audio_codec.cc  es8311_audio_codec.cc  es8311_audio_codec.h  vb6824_audio_codec.cc  vb6824_audio_codec.h
main/audio/processors/: afe_audio_processor.cc  afe_audio_processor.h  no_audio_processor.cc  no_audio_processor.h
main/audio/wake_words/: afe_wake_word.cc  afe_wake_word.h
main/audio_codecs/: audio_codec.cc  audio_codec.h  es8311_audio_codec.cc  vb6824_audio_codec.h
main/audio_processing/: afe_audio_processor.cc  dummy_audio_processor.cc  wake_word_detect.cc
main/boards/: README.md
main/boards/common/: backlight.cc  board.cc  board.h  button.cc  camera.h  data_point_manager.cc  data_point_manager.h  dual_network_board.cc  dual_network_board.h  esp32_camera.cc  esp32_camera.h  ml307_board.cc  ml307_board.h  power_save_timer.cc  power_save_timer.h  servo.cc  servo.h  w25q64_flash.cc  w25q64_flash.h  wifi_board.cc  wifi_board.h
main/boards/doit-ai-01-kit/: config.h  config.json  doit-ai-01-kit.cc
main/boards/doit-ai-01-kit-nfc/: config.h  config.json  doit-ai-01-kit.cc
main/boards/doit-esp32s3-eye/: config.h  config.json  doit-esp32s3-eye.cc
main/boards/doit-esp32s3-eye-6824/: config.h  config.json  doit-esp32s3-eye-6824.cc
main/boards/esp32-s3-touch-amoled-1.8/: esp32-s3-touch-amoled-1.8.cc
main/boards/esp32-s3-vb6824-lcd/: esp32-s3-vb6824-lcd.cc
main/boards/esp32-s3-xunguan-1.28/: assert.h  config.h  config.json  esp32-s3-xunguan-1.28.cc  power_manager.h  xunguan_display.cc  xunguan_display.h
main/boards/esp32-s3-xunguan-1.28-old/: config.json  esp32-s3-xunguan-1.28-old.cc
main/boards/esp32-s3-xunguan-1.7/: board_control.cc  config.json
main/boards/gizwits-4key/: config.h  config.json  gizwits-4key.cc  power_manager.h
main/boards/gizwits-4key-ml307/: config.h  config.json  gizwits-4key.cc
main/boards/gizwits-c2-6824-DRF-W300CA/: config.h  config.json  gizwits-c2-6824-DRF-W300CA.cc  lws_data_point_manager.cc  lws_data_point_manager.h  motor_control.cc  motor_control.h  power_manager.h  rgb_led.cc  rgb_led.h
main/boards/gizwits-c2-6824-birdcage/: config.h  config.json  gizwits-c2-6824.cc
main/boards/gizwits-c2-6824-cwh/: config.h  config.json  gizwits-c2-6824.cc
main/boards/gizwits-c2-6824-light-robot/: config.h  config.json  gizwits-c2-6824.cc  minimal_ws2812.cc  minimal_ws2812.h  power_manager.h  strip_led.cc  strip_led.h
main/boards/gizwits-c2-6824-lvlin/: config.h  config.json  gizwits-c2-6824.cc  led_signal.cc  led_signal.h  lvlin_data_point_manager.cc  lvlin_data_point_manager.h  power_manager.h
main/boards/gizwits-c2-6824-ml307/: config.h  config.json  gizwits-c2-6824.cc
main/boards/gizwits-c2-6824-motor/: config.h  config.json  gizwits-c2-6824.cc  motor_driver.cc  motor_driver.h
main/boards/gizwits-c2-6824-toy/: config.h  config.json  gizwits-c2-6824.cc  power_manager.h  toy_data_point_manager.cc  toy_data_point_manager.h
main/boards/gizwits-c2-6824-uart/: config.h  config.json  (+4 more)
main/camera/: board_camera.cc  board_camera.h
main/custom/: led_signal.cc  led_signal.h  power_manager.h
main/display/: display.cc  display.h  eye_display.cc  eye_display.h  eye_display_horizontal.cc  eye_display_horizontal.h  eye_display_horizontal_emojis.cc  eye_display_horizontal_emojis.h  eye_toy_display.cc  eye_toy_display.h  eye_toy_single_display.cc  eye_toy_single_display.h  lcd_display.cc  lcd_display.h  lottie_display.cc  lottie_display.h  lv_mem_psram.c  mouth_open.h  thorvg_memory_patch.h
main/factory_test/: CHANGES_SUMMARY.md  README.md  UART_DEBUG_GUIDE.md  UART_MODIFICATION.md  factory_test.cc  factory_test.h  test.cc  test.h  test_uart.cc
main/iot/: README.md  giz_api.cc  giz_api.h  giz_mqtt.cc  giz_mqtt.h  thing.cc  thing_manager.cc
main/led/: circular_strip.cc  circular_strip.h  gpio_led.cc  gpio_led.h  led.h  single_led.cc  single_led.h
main/mcp/: mcp.h
main/player/: player.cc  player.h
main/protocols/: coze_websocket_protocol.cc  mcp.cc  mqtt_protocol.cc  protocol.cc  protocol.h  websocket_protocol.cc  websocket_protocol.h
main/server/: giz_api.cc  giz_api.h  giz_mqtt.cc  giz_mqtt.h
(+369 files in other folders)
